--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<title>Pong</title>
 	</head>
 	<body>
-		<div class="game-wrapper">
+		 <div class="game-wrapper">
 			<h1>Pong</h1>
 			<div id="game"></div>
-			<svg id="game" viewBox="0 0 512 256" style="position: absolute; height: 100%; width: 100%">
+			<!-- <svg id="game" viewBox="0 0 512 256">
 				<style>
 					#background {
 						fill: #353535;
@@ -47,10 +47,10 @@
 				<rect id="pad-1" class="pad" x="18" y="100" width="8" height="56" />
 				<rect id="pad-2" class="pad" x="494" y="100" width="8" height="56" />
 				<circle id="ball" cx="256" cy="128" r="8" />
-		</svg>
+		</svg> -->
 
 			<!-- Rough-out your SVG mark-up here to start... -->
-		</div>
+		</div> 
 		<script type="text/javascript" src="build/bundle.js"></script>
 	</body>
 </html>
