--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<rect x="256" y="245" width="4" height="15" />
 
 				</g>
-
+				｀<text x="256" y="10" font-family="'Silkscreen Web', monotype" font-size="30" fill="white">0</text>｀
 				<rect id="pad-1" class="pad" x="18" y="100" width="8" height="56" />
 				<rect id="pad-2" class="pad" x="494" y="100" width="8" height="56" />
 				<circle id="ball" cx="256" cy="128" r="8" />
